# projetos

./: README.md
Colab/: README.md
Docker-Compose/: README.md  docker-compose.yml
Landing-page/: index.html
bank-basic-nextjs/: README.md  package-lock.json  package.json
blog-next/: .env  README.md  environment.d.ts  package-lock.json  package.json
btcwallet/: package-lock.json
calculadora/: README.md  index.html
login-nextjs-jest-globalcss-chakraui/: .babelrc  README.md  index.test.ts  package-lock.json  package.json  tsconfig.json
login-reactjs-typescript/: package-lock.json  package.json  tsconfig.json
login-with-next and NextAuth/: README.md  package-lock.json  package.json
python/twitter-consumer-api/: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requeriments.txt
python/twitter-consumer-api/src/mock/: data.py
python/twitter-consumer-api/src/models/: db.py
python/twitter-consumer-api/src/models/schemas/: data_list_schema.py  find_one_schema.py
python/twitter-consumer-api/src/routes/DataList/: DataListRoute.py
python/twitter-consumer-api/src/services/DataList/: data_list_service.py
python/twitter-consumer-api/src/services/MongoDB/: find_one.py  insert_many.py
python/twitter-consumer-api/src/services/trends/: Trends.py
python/twitter-consumer-api/src/tests/unit/: test_connection_db.py
reactjs-typescript-backend Node & Python/: .env  README.md  package-lock.json  package.json
styled-components com form validation/: README.md  db.json  package-lock.json  package.json
to-do-list/: README.md  index.html  index.html.html
(+475 files in other folders)
